panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_invalid.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_invalid.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: bitfields can only be struct or union members, not global variables
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:1:16]
   │
 1 │ typedef int T1:20;
   │             ─┬ ─┬  
   │              │  ╰── bitfields are not allowed here
   │              │     
   │              ╰───── in this global variable
───╯

Error: use of undeclared identifier `undefined`
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:2:16]
   │
 2 │ typedef int T2:undefined;
   │                ────┬────  
   │                    ╰────── this name has not been declared
───╯

Error: bitfields can only be struct or union members, not global variables
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:2:16]
   │
 2 │ typedef int T2:undefined;
   │             ─┬ ────┬────  
   │              │     ╰────── bitfields are not allowed here
   │              │            
   │              ╰──────────── in this global variable
───╯

Error: bitfields can only be struct or union members, not global variables
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:4:16]
   │
 4 │ typedef int T3:sizeof(void);
   │             ─┬ ──────┬─────  
   │              │       ╰─────── bitfields are not allowed here
   │              │               
   │              ╰─────────────── in this global variable
───╯

Error: `typedef` declarations cannot have initialisers
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:6:13]
   │
 6 │ typedef int T4 = 42;
   │ ───────     ─┬   ─┬  
   │              │    ╰── help: remove this initialiser
   │              │       
   │              ╰─────── in this `typedef` declaration
───╯

Error: `typedef` declarations cannot have initialisers
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:7:13]
   │
 7 │ typedef int T5 = undefined;
   │ ───────     ─┬   ────┬────  
   │              │       ╰────── help: remove this initialiser
   │              │              
   │              ╰────────────── in this `typedef` declaration
───╯

Error: use of undeclared identifier `undefined`
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:7:18]
   │
 7 │ typedef int T5 = undefined;
   │                  ────┬────  
   │                      ╰────── this name has not been declared
───╯

Error: `typedef` declarations cannot have initialisers
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:8:13]
   │
 8 │ typedef int T6:10 = 20;
   │ ───────     ─┬      ─┬  
   │              │       ╰── help: remove this initialiser
   │              │          
   │              ╰────────── in this `typedef` declaration
───╯

Error: bitfields can only be struct or union members, not global variables
   ╭─[panko/tests/cases/typedef/test_error_invalid.c:8:16]
   │
 8 │ typedef int T6:10 = 20;
   │             ─┬ ─┬  
   │              │  ╰── bitfields are not allowed here
   │              │     
   │              ╰───── in this global variable
───╯
