panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__typedef__test_error_redeclaration_with_different_identifier_kind_as_pointer.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind_as_pointer.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/typedef/test_error_redeclaration_with_different_identifier_kind_as_pointer.c"
   (typedef global `int`)
   (redeclared global)
   (declaration another_global~0 `ptr<int>` ∅)
   (redeclared another_global)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (typedef local `int`)
         (redeclared local)
         (declaration another_local~3 `ptr<int>` ∅)
         (redeclared another_local))))

----- stderr -----
